fix: use mongodb as LLM memory
